feat:新增workspance功能，必须新增空间才能新增会话

--- a/src/components/WorkspacePanel/WorkspacePanel.module.css
+++ b/src/components/WorkspacePanel/WorkspacePanel.module.css
@@ -17,15 +17,27 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    min-height: 0;
+}
+
+.tabs :global(.ant-tabs-content-holder) {
+    flex: 1;
+    min-height: 0;
+    overflow: hidden;
 }
 
 .tabs :global(.ant-tabs-content) {
-    flex: 1;
-    height: 0;
+    height: 100%;
 }
 
 .tabs :global(.ant-tabs-tabpane) {
     height: 100%;
+}
+
+.tabs :global(.ant-tabs-tabpane-active) {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .tabLabel {
@@ -51,6 +63,8 @@
 }
 
 .editorContainer {
+    flex: 1;
+    min-height: 0;
     height: 100%;
     overflow: hidden;
 }
